apps/grafana/manifest.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingressroute
  namespace: grafana
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`grafana.andusystems.com`) && PathPrefix(`/`)"
      kind: Rule
      middlewares:
        - name: grafana-headers
          namespace: grafana
      services:
        - name: monitoring-grafana
          port: 80
          namespace: grafana
          serversTransport: grafana-transport
  tls:
    secretName: grafana-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingressroute-http
  namespace: grafana
spec:
  entryPoints:
    - web
  routes:
    - match: "Host(`grafana.andusystems.com`) && PathPrefix(`/`)" #TODO: Change this before open sourcing
      kind: Rule
      middlewares:
        - name: redirect-to-https
          namespace: grafana
      services:
        - name: monitoring-grafana
          port: 80
          namespace: grafana
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: grafana
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: grafana-headers
  namespace: grafana
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
    customResponseHeaders:
      X-Frame-Options: ""
